# WaffleWeather

./: .dockerignore  .env.example  .gitignore  API.md  DEVELOPMENT.md  DOCKER.md  README.md  justfile
backend/: AGENTS.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_station_altitude.py  003_lightning_events.py  004_add_humidity_minmax.py  005_add_bgt_wbgt_vpd.py  007_enable_realtime_aggregation.py  009_add_pressure_wind_solar_minmax.py  010_timezone_aware_aggregates.py
backend/app/: config.py  database.py  main.py
backend/app/api/: aggregates.py  lightning.py  observations.py  records.py  reports.py  router.py  stations.py  version.py  websocket.py
backend/app/models/: __init__.py  lightning.py  observation.py  station.py
backend/app/mqtt/: client.py  parser.py
backend/app/schemas/: lightning.py  observation.py  records.py  station.py  websocket.py
backend/app/services/: broadcast.py  derived.py
backend/tests/: test_api_aggregates.py  test_api_key_middleware.py  test_api_lightning.py  test_api_observations.py  test_api_records.py  test_api_reports.py  test_api_stations.py  test_broadcast.py  test_config.py  test_cors.py  test_derived.py  test_main.py  test_mqtt_client.py  test_parser.py  test_schemas.py
deploy/: ecowitt2mqtt.service  mosquitto.conf  nginx.conf  setup.sh  waffleweather-backend.service  waffleweather-frontend.service
docker/: .env.example  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
frontend/: AGENTS.md  next.config.ts  orval.config.ts  (+2 more)
tools/fixtures/: generate_fixtures.py  pyproject.toml
tools/simulator/: README.md  pyproject.toml  simulator.py
tools/simulator/tests/: test_simulator.py
(+145 files in other folders)
