[project]
name = "waffleweather-fixtures"
version = "0.1.0"
description = "Golden value fixture generator for WaffleWeather E2E tests"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
generate-fixtures = "generate_fixtures:cli"
